<resources>
    <string name="app_name">HuAccount</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_immediate_use">immediate_use</string>

    <string name="action_settings">Settings</string>
    <string name="action_import">Import</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_slideshow">Slideshow</string>
    <string name="action_tools">Tools</string>

    <string name="action_communicate">Communicate</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>

    <string name="user_hint_name">hint_name</string>
    <string name="user_hint_password">hint_password</string>
    <string name="user_hint_topassword">hint_topassword</string>
    <string name="user_forget_password">forget_password</string>
    <string name="user_login">login</string>
    <string name="user_register">register</string>
    <string name="user_being_login">being login</string>
    <string name="user_being_register">being register</string>
    <string name="user_login_success">login was successful</string>
    <string name="user_register_success">register was successful</string>
    <string name="account_register_success">account has been registered</string>
    <string name="account_no_exists">data error</string>
    <string name="account_password_error">account or password error</string>

    <string name="txt_about_html">about html</string>
    <string name="txt_empty">The page is empty</string>
    <string name="txt_error">Load error</string>
    <string name="txt_loading">Loading</string>
    <string name="gank_net_fail">net fail</string>
    <string name="gank_get_data_fail">data fail</string>

    <string name="empty_button">chongshi</string>
    <string name="loading_button">cancel</string>
    <string name="error_button">chongshi</string>

    <string name="connmanager_network">WIFI has been connected and mobile data has been connected</string>
    <string name="connmanager_network_wifi">WIFI has been connected, mobile data has been disconnected</string>
    <string name="connmanager_network_data">WIFI has been disconnected and mobile data has been connected</string>
    <string name="connmanager_network_off">WIFI has been disconnected, mobile data has been disconnected</string>

</resources>
