<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--<include layout="@layout/layout_toolbar"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/select_login_bg" >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
             />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:hint="@string/user_hint_name"
            android:textColor="@color/black_text2_color"
            android:textColorHint="@color/black_text3_color"
            android:textSize="14sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/select_login_bg" >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            />

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:hint="@string/user_hint_password"
            android:textColor="@color/black_text2_color"
            android:textColorHint="@color/black_text3_color"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_forget"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:paddingRight="20dp"
        android:text="@string/user_forget_password"
        android:textColor="#ff8c00"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/main_color"
        android:text="@string/user_login"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>


    <Button
        android:id="@+id/btn_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/select_login_bg"
        android:text="@string/user_register"
        android:textColor="@color/main_color"
        android:textSize="14sp"/>


</LinearLayout>